# UKTides_pi

./: .travis.yml  CI.md  CMakeLists.txt  README.md  UKTides-plugin.xml.in  UKTides.fbp  UKTides_pi.fbp  appveyor.yml  uktides-plugin.xml.in
.circleci/: config.yml
ci/: circleci-build-debian.sh  circleci-build-flatpak.sh  circleci-build-mingw.sh  circleci-build-raspbian-armhf.sh  travis-build-raspbian-armhf.sh
data/pictures/: UKTides.html
flatpak/: 0001-flatpak-Update-API-lookup-data-dir-using-GetPluginDa.patch  Makefile  org.opencpn.OpenCPN.Plugin.UKTides.yaml  org.opencpn.OpenCPN.Plugin.uktides.yaml
po/: POTFILES.in  UKTides_pi.pot  ar_SA.po  bg_BG.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  es.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fil_PH.po  fr.po  fr_FR.po  gl.po  gl_ES.po  hi_IN.po  hu.po  hu_HU.po  id_ID.po  is_IS.po  it.po  ja.po  ja_JP.po  ko_KR.po  mr_IN.po  nb.po  nb_NO.po  nl.po  nl_NL.po  pl.po  (+17 more)
src/: NavFunc.cpp  NavFunc.h  UKTides_pi.cpp  UKTides_pi.h  UKTidesgui.cpp  UKTidesgui.cpp.bak  UKTidesgui.h  UKTidesgui.h.bak  UKTidesgui_impl.cpp  UKTidesgui_impl.h  icons.cpp  icons.h  tidetable.cpp  tidetable.h
src/GL/: gl.h  glu.h
